<resources>
    <string name="app_name">sens</string>
    <string name="start">пиздуй от сюда</string>
    <string name="title_alert">알림</string>
    <string name="title_add_capacity">추가할 컵의 용량(ml)</string>
    <string name="title_edit_capacity">수정할 컵의 용량(ml)</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="msg_alarm">수분을 보충할 시간입니다!</string>
    <string name="msg_require_nfc">NFC 기능과 Android Beam을 켜주세요.</string>
    <string name="msg_require_capacity">용량추가 버튼을 이용하여 섭취 용량을 추가해주세요.</string>
    <string name="msg_ask_remove_capacity">해당 용량을 삭제 하시겠습니까?</string>
    <string name="msg_delete_capacity">용량이 삭제 되었습니다.</string>
    <string name="msg_invalid_input">유효한 값을 입력해주세요.</string>
    <string name="msg_press_long">컵을 2초간 꾹 누르면 해당 용량을 삭제 하실 수 있습니다.</string>
    <string name="msg_edited_capacity">섭취량을 수정하였습니다.</string>
    <string name="next">Next</string>
    <string name="back">back</string>
    <string name="submit_a_report">submit a report</string>
    <string name="sens_setup_title">Specify active electrode zones</string>
    <string name="sens_select_title">Select sensor type</string>
    <string name="parameters_simulation_title">Select simulation options</string>
    <string name="comment_title">Doctor comments</string>
    <string name="lesson_eight_error_could_not_create_vbo">Could not create vertex buffer object: %s</string>
    <string name="lesson_eight_error_unknown">Unknown error: %s</string>
    <string name="save">save</string>
    <string name="gesture_state_open">open state</string>
    <string name="finger_position">Rotation:</string>
    <string name="rotation_state_close">inside</string>
    <string name="temperature">temperature</string>
    <string name="_1">0</string>
    <string name="save_frame">save frame</string>
    <string name="comment">Enter you comment</string>
</resources>
