<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_chart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1d1f2f">

    <!-- # Main Layout # -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Top Layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.53">

            <TextView
                android:id="@+id/dailyrecord_tv_todaydate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textAlignment="center"
                android:text="@string/sens_setup_title"
                style="@style/Text"
                android:textColor="#ffffff"
                android:textSize="23sp" />
        </RelativeLayout>

        <!-- Body Layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#2e3241"
                android:orientation="horizontal" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dailyrecord_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:divider="#2e3241"
                android:dividerHeight="1dp"
                app:layoutManager="LinearLayoutManager" />

            <TextView
                android:id="@+id/dailyrecord_tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:text="기록이 없습니다."
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="22sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/next_2_btn"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="8dp"
                android:layout_toStartOf="@+id/next_1_btn"
                android:background="#00ffffff"
                android:gravity="center"
                android:text="@string/next"
                style="@style/Text"
                android:textColor="#ffffff"
                android:textAlignment="center" />

            <Button
                android:id="@+id/next_1_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/ic_next_48" />

            <Button
                android:id="@+id/back_2_btn"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@+id/back_1_btn"
                android:background="#00ffffff"
                android:gravity="center"
                android:text="@string/back"
                style="@style/Text"
                android:textAlignment="center"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/back_1_btn"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/ic_back_48" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
